# TinyTroupe

./: .gitignore  README.md  atam_implementation_plan.md  config.ini  pyproject.toml  test-report.html  test-results.xml
.clinerules/: atamsim-architecture.md  tinytroupe-architecture.md
.github/: copilot-instructions.md
atamsim/: README.md  __init__.py  config.ini  config.py  models.py  pyproject.toml
atamsim/data/sample_architecture/: README.md  architecture_overview.md  business_drivers.md
atamsim/extraction/: __init__.py  concern_extractor.py  report_generator.py  scenario_extractor.py  vote_extractor.py
atamsim/phases/: __init__.py  approach_analysis.py  approach_identification.py  base_phase.py  brainstorming_phase.py  concern_identification.py  presentation_phase.py  scenario_generation.py  scenario_prioritization.py
atamsim/prompts/: approach_analysis.mustache  brainstorming.mustache  concern_extraction.mustache  presentation.mustache  scenario_generation.mustache  scenario_prioritization.mustache
atamsim/session/: __init__.py  atam_session.py
atamsim/stakeholders/: __init__.py  stakeholder_factory.py  templates.py
atamsim/tests/: conftest.py  test_models.py
docs/: high_level_design.md
examples/: Corporate Innovation Flow.ipynb  Creating and Validating Agents.ipynb  DnD Adventure with Vision (image modality).ipynb  Interview with Customer.ipynb  Viral Marketing Simulation.ipynb  Visual Product Evaluation (image modality).ipynb  Web App Testing.ipynb  config.ini
tests/: conftest.py
tinytroupe/: __init__.py  config.ini
(+46 files in other folders)
